# bevy-multiplayer-browser-test

./: CNAME  Cargo.toml  README.md  bevy_game.js  index.html
.cargo/: config.toml
.github/workflows/: ci.yaml  pages.yaml  release.yaml
src/: main.rs
