[package]
name = "bevy-multiplayer-browser-test"
version = "0.1.0"
edition = "2021"

[dependencies]
# Graphics
bevy = "0.10.1"

# Networking
bevy_ggrs = { version = "0.12", features = ["wasm-bindgen"] } # GGRS (rollback networking)
bevy_matchbox = { version = "0.6", features = ["ggrs"] } # Matchbox (connection management)

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html